[project]
name = "ultimakit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Alexeev Bronislav", email = "alexeev.dev@mail.ru" }
]
requires-python = ">=3.13"
dependencies = [
    "asyncio>=3.4.3",
    "black>=25.1.0",
    "click>=8.2.1",
    "configparser>=7.2.0",
    "gitpython>=3.1.44",
    "isort>=6.0.1",
    "jinja2>=3.1.6",
    "matplotlib>=3.10.3",
    "mypy>=1.16.0",
    "orjson>=3.10.18",
    "plotly>=6.1.2",
    "psutil>=7.0.0",
    "pydantic>=2.11.7",
    "pyyaml>=6.0.2",
    "requests>=2.32.4",
    "rich>=14.0.0",
    "ruff>=0.11.13",
    "toml>=0.10.2",
    "tqdm>=4.67.1",
    "watchdog>=6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "furo>=2024.8.6",
    "pytest>=8.4.0",
    "pytest-cov>=6.2.1",
    "sphinx>=8.2.3",
]
